--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -301,7 +301,7 @@ _:-o-prefocus,
     }
 }
 
-// TODO: ::ng-deep / /deep/ 
+// TODO: ::ng-deep / /deep/
 // Seems to be a form of selection that will be abolished in the future, an alternative form of editing of this component should be found without the use of these selectors.
 /*
     Links de referência:
@@ -1007,7 +1007,7 @@ label {
   --------------------------------------------------------------*/
 
 @media (max-width: 767px) {
-    //prime 
+    //prime
     ::ng-deep .p-inputMask input {
         text-align: right;
         margin: 0;
@@ -1140,7 +1140,7 @@ label {
     p-autoComplete {
         font-size: 3.2vw !important
     }
-    //prime 
+    //prime
     ::ng-deep .p-inputMask input {
         text-align: left;
         padding: 0px 0 0 0;
@@ -1590,8 +1590,8 @@ label {
 }
 
 .autocomplete-clear-btn {
-    position: absolute; 
-    right: 0; 
+    position: absolute;
+    right: 0;
     top: 15px;
 }
 @media (min-width: 1440px){
@@ -1627,7 +1627,7 @@ label {
         left: 0;
         top: 0;
         z-index: 2;
-    }    
+    }
     .close-modal-button {
         width: 30px;
         height: 30px;
@@ -1647,4 +1647,35 @@ label.input-terms-label {
     text-align: center;
     width: 100%;
     font-size: 22px;
+}
+
+@media (max-width: 990px) {
+   .form-checkbox-select {
+       flex-direction: column;
+       .checkbox-item {
+           text-align: left;
+           padding: 0 10px;
+       }
+   }
+    .form-group {
+       margin-bottom: 0;
+       position: relative;
+       &.experiences-input {
+           .select-dropdown {
+               padding: 10px 0;
+               justify-content: flex-start;
+           }
+       }
+       .form-checkbox-select {
+           padding: 15px 0 10px;
+           display: flex;
+           justify-content: space-around;
+           flex-wrap: nowrap;
+           background-color: rgba(0, 0, 0, .3);
+           label {
+               display: inline-block;
+               padding-left: 5px;
+           }
+       }
+    }
 }
