--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -199,23 +199,24 @@
 
             <div class="animated fadeIn" *ngIf="studyData && !completedSignup">
               <form [formGroup]="step2Form" class="forms">
-                <div class="form-group local_committee">
+                <div class="form-group city">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
-                        <i class="fas fa-map-marker-alt"></i>AIESEC mais próxima</div>
+                        <i class="fas fa-home"></i> Cidade
+                      </div>
                     </div>
                     <div class="dropdown">
                       <div class="styled-select">
-                        <p-autoComplete [(ngModel)]="user.local_committee" [suggestions]="filteredPlaces" (completeMethod)="searchPlaces($event)"
-                          #placesAutocomplete (onFocus)="selectInput('local_committee');placesAutocomplete.handleDropdownClick();" dropdownMode="current"
-                          field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado" placeholder="Esse é o escritório que vai cuidar de você!"></p-autoComplete>
-                          <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('local_committee')"  *ngIf="user.local_committee"></i>
+                        <p-autoComplete [(ngModel)]="user.city" [suggestions]="filteredCitiesOptions" (completeMethod)="searchCities($event)" #citiesAutocomplete
+                          (onFocus)="selectInput('city'); citiesAutocomplete.handleDropdownClick();" dropdownMode="current"
+                          field="name" formControlName="city" emptyMessage="Nenhum resultado" placeholder="Qual a cidade onde você reside?"></p-autoComplete>
+                        <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('city')" *ngIf="user.city"></i>
                       </div>
                     </div>
                   </div>
-                  <div *ngIf="isValidStudy('local_committee_id')" class='error-message'>
-                    Selecione a AIESEC mais próxima.
+                  <div *ngIf="isValidStudy('city')" class='error-message'>
+                    Por favor, selecione sua cidade
                   </div>
                 </div>
                 <div class="form-group scholarity">
@@ -255,6 +256,28 @@
                     </div>
                     <div *ngIf="isValidStudy('university_id')" class='error-message'>
                       Selecione uma universidade.
+                    </div>
+                  </div>
+                  <div class="form-group" *ngIf='user.university.name == "OUTRA"'>
+                    <div class="input-group">
+                      <div class="input-group-prepend desktop">
+                        <div class="input-group-text">
+                          <i class="fas fa-graduation-cap"></i>
+                          Nome da Universidade
+                        </div>
+                      </div>
+                      <!-- desktop -->
+                      <input type="text" class="form-control desktop" placeholder="Digite o nome da sua universidade" [(ngModel)]="user.other_university"
+                        formControlName="other_university" name="other_university" required>
+                       <!-- mobile -->
+                      <input type="text" class="form-control mobile" placeholder="Por favor, digite o nome da sua universidade" [(ngModel)]="user.other_university"
+                        formControlName="other_university" name="other_university" required>
+                      <div class="valid-feedback">
+                        <i class="fas fa-check"></i>
+                      </div>
+                    </div>
+                    <div *ngIf="isValidStudy('other_university') && user.university.name == 'OUTRA'" class='error-message'>
+                      Por favor, digite uma universidade válida.
                     </div>
                   </div>
                   <div class="form-group college_course">
@@ -331,7 +354,7 @@
                       <div class='mobile forms-terms-area' (click)='openModal()'>
                         <label for="inputTermos" class='input-terms-label'>Termos e Condições</label>
                         <label class='form-group forms-tem-accepted info-mobile-content'>
-                          Ao se cadastrar, você está concordando com os termos e condições da AIESEC Brasil. <br> <span style='text-decoration: underline'> Para ler os termos, basta clicar aqui. </span> 
+                          Ao se cadastrar, você está concordando com os termos e condições da AIESEC Brasil. <br> <span style='text-decoration: underline'> Para ler os termos, basta clicar aqui. </span>
                         </label>
                       </div>
                     </div>
