--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -365,12 +365,24 @@
                   </div>
                 </div>
 
-                <div class="form-checkbox-select">
-                   <div class="checkbox-item" *ngFor="let travel of travelOptions">
-                     <input type="radio" id="{{travel.name}}" value="{{travel.value}}" name='travel'>
-                     <label for="language" for="{{travel.name}}">
-                       {{travel.name}}
-                    </label>
+                <div class="form-group experiences-input">
+                  <div class="input-group select-dropdown">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <i class="fas fa-book-open"></i>Quando pode viajar</div>
+                    </div>
+                    <div class="label-experience">
+                      Escolha o período de tempo que você estará disponível
+                    </div>
+                  </div>
+
+                  <div class="form-checkbox-select">
+                     <div class="checkbox-item" [(ngModel)]="user.when_can_travel" *ngFor="let travel of travelOptions">
+                       <input type="radio" id="{{travel.name}}" value="{{travel.value}}" name='travel'>
+                       <label for="language" for="{{travel.name}}">
+                         {{travel.name}}
+                      </label>
+                    </div>
                   </div>
                 </div>
 
