--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -199,6 +199,28 @@
 
             <div class="animated fadeIn" *ngIf="studyData && !completedSignup">
               <form [formGroup]="step2Form" class="forms">
+
+                <div class="form-group preferred_destination">
+                 <div class="input-group select-dropdown">
+                   <div class="input-group-prepend">
+                     <div class="input-group-text" style="text-align: left;">
+                       <i class="fas fa-plane"></i> Onde deseja viver a <br/>experiência?
+                     </div>
+                   </div>
+                   <div class="dropdown">
+                     <div class="styled-select">
+                       <p-autoComplete [(ngModel)]="user.preferred_destination" [suggestions]="filteredPreferredDestinationsOptions" #preferred_destinationAutocomplete (completeMethod)="searchPreferredDestinations($event)"
+                         (onFocus)="selectInput('preferred_destination'); preferred_destinationAutocomplete.handleDropdownClick();" dropdownMode="current"
+                         field="name" formControlName="preferred_destination" emptyMessage="Nenhum resultado" placeholder="Selecione"></p-autoComplete>
+                       <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('preferred_destination')" *ngIf="user.preferred_destination"></i>
+                     </div>
+                   </div>
+                 </div>
+                 <div *ngIf="isValidStudy('preferred_destination')" class='error-message'>
+                   Por favor, informe onde deseja viver a experiência
+                 </div>
+               </div>
+
                 <div class="form-group city">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
@@ -323,6 +345,25 @@
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
+                        <i class="fas fa-book-open"></i>Quando pode viajar</div>
+                    </div>
+                    <div class="label-experience">
+                      Escolha o período de tempo que você estará disponível
+                    </div>
+                  </div>
+                  <div class="form-checkbox-select">
+                    <div class="checkbox-item" [(ngModel)]="user.when_can_travel" *ngFor="let travel of travelOptions">
+                      <input type="radio" id="{{travel.name}}" value="{{travel.value}}" name='travel'>
+                      <label for="language" for="{{travel.name}}">
+                        {{travel.name}}
+                      </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group experiences-input">
+                  <div class="input-group select-dropdown">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
                         <i class="fas fa-book-open"></i>Experiências</div>
                     </div>
                     <div class="label-experience">
@@ -337,6 +378,30 @@
                         {{experience.name}}
                       </label>
                     </div>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <div class="input-group">
+                    <div class="input-group-prepend desktop">
+                      <div class="input-group-text">
+                        <i class="fas fa-file"></i>Currículo
+                      </div>
+                    </div>
+                    <!-- desktop -->
+                    <input type="file" class="form-control desktop" [(ngModel)]="user.curriculum" formControlName="curriculum"
+                      name="curriculum" required>
+
+                    <!-- mobile -->
+                    <i class="fas fa-user mobile mobile-icon"></i>
+                    <input type="text" class="form-control mobile" [(ngModel)]="user.curriculum" formControlName="other_university"
+                      name="curriculum" required>
+                    <div class="valid-feedback">
+                      <i class="fas fa-check"></i>
+                    </div>
+                  </div>
+                  <div *ngIf="isValidStudy('curriculum')" class='error-message'>
+                    Envie seu currículo
                   </div>
                 </div>
 
