fix(landing-menu/footer): fixed forms links

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -63,13 +63,13 @@
           <div class="footer-group-links col-md-4 col-sm-6">
             <p class="semibold footer-link-title">Jovens</p>
             <p>
-              <a routerLink="../empreendedor-global">Empreendedor Global</a>
+              <a (click)="goToGe()">Empreendedor Global</a>
             </p>
             <p>
-              <a routerLink="../talento-global">Talento Global</a>
+              <a (click)="goToGt()">Talento Global</a>
             </p>
             <p>
-              <a routerLink="../voluntario-global">Voluntário Global</a>
+              <a (click)="goToGv()">Voluntário Global</a>
             </p>
             <p>
               <a href="http://blog.aiesec.org.br/hospede-um-intercambista/">Hospede um intercambista</a>
