--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -220,7 +220,7 @@
                  </div>
                </div>
 
-                <div class="form-group local_committee">
+                <!-- <div class="form-group local_committee">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
@@ -239,9 +239,9 @@
                   <div *ngIf="isValidStudy('local_committee_id')" class='error-message'>
                     Selecione a AIESEC mais próxima.
                   </div>
-                </div>
+                </div> -->
 
-                <div class="form-group scholarity">
+                <!-- <div class="form-group scholarity">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
@@ -259,8 +259,9 @@
                   <div *ngIf="isValidStudy('scholarity')" class='error-message'>
                     Selecione um nível de escolaridade
                   </div>
-                </div>
-                <div *ngIf="+user.scholarity.id >= 2 && +user.scholarity.id != 6" class="animated fadeIn faster">
+                </div> -->
+                <!-- <div *ngIf="+user.scholarity.id >= 2 && +user.scholarity.id != 6" class="animated fadeIn faster"> -->
+                <div class="animated fadeIn faster">
                   <div class="form-group university">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
@@ -281,7 +282,7 @@
                       Selecione uma universidade.
                     </div>
                   </div>
-                  <div class="form-group" *ngIf="+user.scholarity.id >= 2 && +user.scholarity.id != 6 && +user.university.id == 3">
+                  <div class="form-group" *ngIf="+user.university.id == 3">
                     <div class="input-group">
                       <div class="input-group-prepend desktop">
                         <div class="input-group-text">
@@ -377,10 +378,10 @@
                   </div>
 
                   <div class="form-checkbox-select">
-                     <div class="checkbox-item" [(ngModel)]="user.when_can_travel" *ngFor="let travel of travelOptions">
-                       <input type="radio" id="{{travel.name}}" value="{{travel.value}}" name='travel'>
-                       <label for="language" for="{{travel.name}}">
-                         {{travel.name}}
+                     <div class="checkbox-item" *ngFor="let travel of travelOptions">
+                      <label>
+                        <input type="radio" value="{{travel.id}}" [(ngModel)]="user.when_can_travel" name='when_can_travel' formControlName="when_can_travel">
+                        {{travel.name}}
                       </label>
                     </div>
                   </div>
@@ -393,21 +394,17 @@
                         <i class="fas fa-file"></i>Currículo
                       </div>
                     </div>
-                    <!-- desktop -->
-                    <input type="file" class="form-control desktop" [(ngModel)]="user.curriculum" formControlName="curriculum"
-                      name="curriculum" required>
+                    <input type="file" class="form-control" name="curriculum" required>
 
                     <!-- mobile -->
                     <i class="fas fa-user mobile mobile-icon"></i>
-                    <input type="text" class="form-control mobile" [(ngModel)]="user.curriculum" formControlName="other_university"
-                      name="curriculum" required>
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
                   </div>
-                  <div *ngIf="isValidStudy('curriculum')" class='error-message'>
+                  <!-- <div *ngIf="isValidStudy('curriculum')" class='error-message'>
                     Envie seu currículo
-                  </div>
+                  </div> -->
                 </div>
 
                 <!-- Terms -->
